--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Curriculum Vitae</title>
-		<link rel="stylesheet" href="cv.css">
+		<link rel="stylesheet" href="/Users/annakursanova11/Desktop/CV/styles/cv.css">
 	</head>
 
 	<body>
@@ -13,94 +13,93 @@
 		<div class="block-title"> 
 		<p class="name">Anna Kursanova</p>	
 		<div class="tester"> <i> Tester </i></div> <br>
-		<div class="inf"> Magistralnaya street 70a | Omsk city <br>
-		8-960-980-0615 | anyaangeles1@gmail.com </div>
+            <div class="inf"> Magistralnaya street 70a | Omsk city </div>
+		<div class="inf">8-960-980-0615 | anyaangeles1@gmail.com </div>
 		</div>
 		
 
 		
-		
-		<span  class="content"> 
-			<img class="foto" src="img/foto.jpg" >
+		<div  class="block-bar_progress"> 
+			<img class="foto" src="/Users/annakursanova11/Desktop/CV/img/foto.jpg" >
 		
 		<div>
-			<div class="skills"> Skills </div>
+			<div class="buttons"> Skills </div>
 
 			<div>  Communication  
 				</div>
 			<div class="border"> 
-				<div class="bgBorderCo"> </div> 
+				<div class="border-border_co"> </div> 
 			</div>
 
 			<div> Creativity 
 				</div>
 			<div class="border"> 
-				<div class="bgBorderCr"> </div>
+				<div class="border-border_cr"> </div>
 			</div>
 
 			<div> Teamwork
 			 	</div>
 			<div class="border"> 
-				<div class="bgBorderTm"> </div> 
+				<div class="border-border_tm"> </div> 
 			</div>
 
 			<div> Organization 
 				</div>
 			<div class="border"> 
-				<div class="bgBorderOr"> </div> 
+				<div class="border-border_or"> </div> 
 			</div>
 
 			<div> Leadership 
 				</div>
 			<div class="border"> 
-				<div class="bgBorderLe"> </div>
+				<div class="border-border_le"> </div>
 			 </div>
 
 			<div> Teamplayer
 				</div>
 			<div class="border"> 
-				<div class="bgBorderTe"> </div> 
-			</div>
-
-			<div class="interest"> Interests </div>
+				<div class="border-border_te"> </div> 
+            </div>
+            
+			<div class="buttons"> Interests </div>
 
 			<div> Sport 
 				</div>
 			<div class="border"> 
-				<div class="bgBorderOr"> </div> 
+				<div class="border-border_or"> </div> 
 			</div>
 
 			<div> Mathematics 
 				</div>
 			<div class="border"> 
-				<div class="bgBorderMth"> </div> 
+				<div class="border-border_mth"> </div> 
 			</div>
 
 			<div> Dancing 
 				</div>
 			<div class="border"> 
-				<div class="bgBorderCr"> </div>
+				<div class="border-border_cr"> </div>
 			 </div>
 
 			<div> Cooking 
 				</div>
 			<div class="border"> 
-				<div class="bgBorderCo"> </div> 
+				<div class="border-border_co"> </div> 
 			</div>
 
 
 		 </div>
 
-		</span>
+		</div>
 
 
 		
-		<span style="vertical-align: top" class="contentRight">
+		<div style="vertical-align: top" class="block-information">
 		
 		<div>
-			<div class="aboutMe">About me</div>
+			<div class="buttons">About me</div>
 
-			<div > I always was an active child and loved to learn something new <br>
+			<div> I always was an active child and loved to learn something new <br>
 			At school I was engaged in dancing, drawing, programming <br>
 			and architecture and now I like all this <br>
 			After the sixth grade I went to a scientific camp  <br>
@@ -110,37 +109,40 @@
 			and learn foreign languages
 			</div> 
 
-		<div class="education"> Education </div> 
+		<div class="buttons"> Education </div> 
 
-		<div> <b>2003/2014</b>Gymnasium #62, Omsk In-depth study of foreing languages</div>
-		<br>
-		<br>
-		<div > <b>2014/2018</b> OmSU, IMIT Applied Mathematics, Machine Learning </div>
+            <div class="block-date"> 2003/2014 </div>
+            <div class="block-text">Gymnasium #62, Omsk In-depth study of foreing languages</div>
+		
+            <div class="block-date"> 2014/2018 </div>
+            <div class="block-text">OmSU, IMIT Applied Mathematics, Machine Learning </div>
 
-		<div class="languages"> Languages </div>
+		<div class="buttons"> Languages </div>
 
 		<div> Russian | English </div>
 
-		<div class="experiens">	Experiens </div>
+		<div class="buttons">	Experiens </div>
 
-		<div> <b>01.2011 -08.2017</b> Company | www.company.com </div>
-		<div>descriptiondescriptiondescriptiondescription</div> 
-		<br>
-		<div> <b>01.2011 -08.2017</b> Company | www.company.com </div>
-		<div>descriptiondescriptiondescriptiondescription</div> 
+        <div class="block-date">01.2011 - 08.2017</div> 
+        <div>Company | www.company.com </div>
+		<div class="block-text">descriptiondescriptiondescriptiondescription</div> 
+		
+        <div class="block-date" > 01.2011 - 08.2017 </div>
+        <div> Company | www.company.com </div>
+		<div class="block-text">descriptiondescriptiondescriptiondescription</div> 
 
-		<div class="reference">Reference</div>
-		<div> Mahael Sweet </div> <br>
-		<div>Big Boss/Company</div> <br>
-		<div>"T. +1 956 989 85<br>
-		 E. Maheal@gmail.com"</div>
+		<div class="buttons">Reference</div>
+		  <div> Mahael Sweet </div> <br>
+		  <div>Big Boss/Company</div> <br>
+		  <div class="block-contacts">"T. +1 956 989 85<br>
+		          E. Maheal@gmail.com"</div>
 
 		</div>
 			
-		</span>
+		</div>
 
 		<div>
-
+            </div>
 		</div>
 	</body>
 
